--- a/008.ipynb
+++ b/008.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 06.像素的编辑"
+    "# 08.图像的复制(np.copy)"
    ]
   },
   {
@@ -13,48 +13,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "import numpy as np"
+    "import os\n",
+    "import numpy as np\n",
+    "import cv2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv2.imread(\"./data/1_BF.jpg\")\n",
+    "img2 = img.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x=10, y=10\n",
-      "img[x,y] = [61 61 61]\n",
-      "img[10,10,ch]\n",
-      "61 61 61 \n",
-      "61\n",
-      "255\n"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "img01 = cv2.imread(\"./dataplt/dapi.png\",1)\n",
-    "\n",
-    "x,y = 10,10\n",
-    "\n",
-    "pxGBR = img01[x,y]\n",
-    "\n",
-    "print(f\"x={x}, y={y}\\nimg[x,y] = {img01[x,y]}\")\n",
-    "\n",
-    "print(f\"img[{x},{y},ch]\")\n",
-    "\n",
-    "for i in range(3):\n",
-    "    print(img01[x,y,i],end=' ')\n",
-    "    \n",
-    "print()\n",
-    "\n",
-    "print(img01.item(x,y,0))\n",
-    "\n",
-    "img01.itemset((x,y,0),255)\n",
-    "print(img01.item(x,y,0))"
+    "img2 is img"
    ]
   },
   {
